src/test/ui/consts/const-eval/const-eval-overflow-4.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-eval-overflow-4.rs:13:13
   |
LL |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |             ^^^^^^^^^^^^^^^^^^^^^ attempt to add with overflow

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
